--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
         <style>
             body {
                 font-family: cursive;
+                margincn;
             }
             .photo-gallery {
                 background: rgb(255, 254, 217);
             }
             .photo {
                 width: 200px;
+                border:10px ridge rgb(165, 97, 42);
+                margin-right:15px;
             }
         </style>
     </head>
